crates/fig-parser/tests/snapshots/integration_tests__using__deep_path.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - std
          - collections
          - hash_map
        generic_args: []
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - core
          - mem
          - layout
          - allocator
        generic_args: []
